# touch

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  CHANGELOG.md  CLAUDE.md  HANDOVER.md  LICENSE  Makefile  README.md  pyproject.toml  pyrightconfig.json  secrets.env.sops.yaml
.githooks/: pre-commit
.github/workflows/: ci.yml  spike-build.yml
docs/: 00-pr-faq.md  00-vision.md  01-requirements.md  02-architecture.md  02-classes.md  02-data-model.md  03-roadmap.md
docs/adr/: 0001-intent-as-pivot.md  0002-dimension-sanity-check.md  0003-prompt-caching-for-cost.md  0004-build123d-export-variable.md  0005-localhost-websocket-coupling.md  0006-touch-document-format.md  0007-pluggable-llm-client.md  0008-picking-and-face-identity.md  0009-desktop-shell-electron-sidecar.md  0010-workspace-and-file-ownership.md  0011-deterministic-selection-resolution.md  0012-layer-stack-authoring.md  0013-shared-live-document.md  0014-mcp-boundary.md  0015-conversation-topology.md  0016-executor-sandboxing.md  README.md
docs/audits/: 2026-05-16-pre-phase-0.md  2026-05-17-pre-phase-1-v2.md  2026-05-17-pre-phase-1-v3.md  2026-05-17-pre-phase-1-v4.md  2026-05-17-pre-phase-1.md  2026-05-18-pre-phase-2a-v2.md  2026-05-18-pre-phase-2a.md  2026-05-28-pre-phase-2b.md  2026-05-28-pre-phase-3.5.md  2026-05-28-pre-phase-3.md  2026-05-30-pre-T0.md  2026-05-30-pre-T1a.md  2026-05-31-pre-T1b.md  2026-05-31-pre-T2.md  2026-06-01-pre-T3.md  2026-06-01-pre-T4.md  2026-06-03-pre-T5.md  2026-06-19-pre-TP1.md  2026-06-22-pre-TP2.md  README.md
docs/blockers/: 2026-05-28-l-bracket-showcase-hole-unreliable.md  2026-05-28-v0-references-exceed-schema.md  2026-06-01-folder-workspace-explorer.md  2026-06-22-tp1-bridge-rescope.md  README.md
docs/notes/: constraints.md  decisions.md  ideas.md  inbox.md  inspiration.md  interaction.md  questions.md  requirements.md  wishes.md
docs/phases/: README.md  phase-0-report.md  phase-0.md  phase-1-report.md  phase-1.md  phase-2a-report.md  phase-2a.md  phase-2b-report.md  phase-2b.md  phase-3-report.md  phase-3.5-report.md  phase-3.5.md  phase-3.md  phase-4.5.md  phase-T0-report.md  phase-T0.md  phase-T10.md  phase-T11.md  phase-T12.md  phase-T13.md  phase-T14.md  phase-T15.md  phase-T1a-report.md  phase-T1a.md  phase-T1b-report.md  phase-T1b.md  phase-T2-report.md  phase-T2.md  phase-T3-report.md  phase-T3.md  phase-T4-report.md  phase-T4.md  phase-T4b.md  phase-T5-report.md  phase-T5.md  phase-T5b.md  phase-T6.md  phase-T7.md  phase-T8.md  phase-T9.md  (+4 more)
examples/: README.md
prompts/: planner.system.md
protocol/: schema.json
scripts/: sidecar.sh
spike/: .gitignore  verify_all.sh
spike/shell/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
spike/shell/src/: main.ts  sidecar.ts  smoke.ts
spike/sidecar/: .gitignore  BUILD_RESULT.txt  README.md  build.spec  build_sidecar.sh  check_client.py  pyi_entry.py  pyproject.toml  verify_day1.sh
spike/sidecar/touch_sidecar/: __init__.py  __main__.py  cube.py  ocp_check.py  server.py  wire.py
spike/web/: .gitignore  README.md  index.html  package-lock.json  package.json  verify_day2.sh  verify_day2.ts  vite.config.ts
spike/web/src/: App.tsx  Viewport.tsx  wire.ts
src/maquette/: cli.py  config.py  intent.py  intent_validation.py  pricing.py
src/maquette/adapters/: __init__.py  build123d_target.py
src/maquette/agent/: executor.py  loop.py  planner.py  sanity.py  worker.py
src/maquette/render/: __init__.py
src/touch_backend/: __main__.py  active_document.py  cli.py  config.py  document.py  finder.py  frames.py  intent.py  intent_validation.py  keychain_bridge.py  layer_bridge.py  layer_stack.py  live_build.py  live_render.py  mcp_server.py  mesh_cache.py  mesh_dump.py  operation_adapter.py  planner.py  pricing.py  provenance.py  server.py  session.py  templates.py  tessellate.py
src/touch_backend/_generated/: __init__.py  protocol.py
src/touch_backend/adapters/: __init__.py  build123d_target.py
src/touch_backend/agent/: executor.py  loop.py  planner.py  sanity.py  worker.py
src/touch_backend/llm_client/: __init__.py  anthropic_api.py  base.py  claude_code.py
src/touch_backend/render/: __init__.py  orthographic.py
tests/: test_active_document.py  test_adapter_determinism.py  test_adapter_export.py  test_adapter_roundtrip.py  test_adapters_build123d.py  test_adapters_protocol.py  test_cli.py  test_config.py  test_document.py  test_executor.py  test_finder.py  test_intent.py  test_intent_validation.py  test_keychain_bridge.py  test_layer_bridge.py  test_layer_stack.py  test_live_build.py  test_live_render.py  test_llm_client.py  test_loop.py  test_mcp_server.py  test_mesh_cache.py  test_operation_adapter.py  test_planner.py  test_planner_live.py  test_planner_touch.py  test_planner_touch_live.py  test_pricing.py  test_protocol_codegen.py  test_provenance.py  test_render.py  test_sanity.py  test_server.py  test_session_doc.py  test_templates.py  test_tessellate.py  test_tp1_exit.py  test_worker.py  test_workspace.py
tests/fixtures/adapters/build123d/box/: expected.py  intent.json
tests/fixtures/adapters/build123d/chamfer/: expected.py  intent.json
tests/fixtures/adapters/build123d/cylinder/: expected.py  intent.json
tests/fixtures/adapters/build123d/extrude/: expected.py  intent.json
tests/fixtures/adapters/build123d/fillet/: expected.py  intent.json
tests/fixtures/render/: cube.step
web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: main.tsx
web/src/app/: ActivityBar.tsx  App.tsx  MenuBar.tsx  StatusBar.tsx  app.css
web/src/doc-store/: doc-store.test.ts  index.ts
web/src/file-tree/: FileTree.tsx
web/src/picking/: index.ts
web/src/platform/: index.ts
web/src/prompt/: PromptPanel.tsx  prompt.test.ts
web/src/protocol-types/: index.ts
web/src/selection/: index.ts  selection.test.ts
web/src/settings/: SettingsPanel.tsx
web/src/transport/: index.ts  transport.test.ts
web/src/viewport/: Viewport.ts  ViewportHost.tsx
web/src/workspace/: index.ts
(+14 files in other folders)
