[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maquette"
version = "0.0.0"
description = "Natural-language CAD prompt to editable parametric solid and STEP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "vandpaolo" }]
keywords = ["cad", "llm", "build123d", "step", "parametric"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Strict: snapshot-sensitive runtime dep (CAD kernel).
    "build123d==0.10.0",
    # Compatible: minor-floats allowed.
    "anthropic~=0.102.0",
    "pydantic~=2.13.0",
    "pyvista~=0.48.0",
    "typer~=0.25.0",
    "python-dotenv~=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0",
    "ruff~=0.15.0",
    "import-linter~=2.11.0",
    "pyright~=1.1.409",
    "coverage~=7.14.0",
]

[project.urls]
Documentation = "https://github.com/vandpaolo/maquette/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/maquette"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserting False is intentional in pytest.raises

[tool.importlinter]
root_package = "maquette"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "intent has no project dependencies"
type = "forbidden"
source_modules = ["maquette.intent"]
forbidden_modules = [
    "maquette.intent_validation",
    "maquette.pricing",
    "maquette.config",
    "maquette.agent",
    "maquette.adapters",
    "maquette.render",
    "maquette.cli",
]

[[tool.importlinter.contracts]]
name = "intent_validation depends only on maquette.intent"
type = "forbidden"
source_modules = ["maquette.intent_validation"]
forbidden_modules = [
    "maquette.pricing",
    "maquette.config",
    "maquette.agent",
    "maquette.adapters",
    "maquette.render",
    "maquette.cli",
]

[[tool.importlinter.contracts]]
name = "adapters depend only on maquette.intent (plus stdlib, no I/O modules)"
type = "forbidden"
source_modules = ["maquette.adapters"]
forbidden_modules = [
    "maquette.intent_validation",
    "maquette.pricing",
    "maquette.config",
    "maquette.agent",
    "maquette.render",
    "maquette.cli",
    "os",
    "pathlib",
    "subprocess",
    "shutil",
    "tempfile",
]
