[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touch-backend"
version = "0.0.0"
description = "Natural-language CAD prompt to editable parametric solid and STEP."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12,<3.13"
authors = [{ name = "vandpaolo" }]
keywords = ["cad", "llm", "build123d", "step", "parametric"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Strict: snapshot-sensitive runtime dep (CAD kernel).
    "build123d==0.10.0",
    # Compatible: minor-floats allowed.
    "anthropic~=0.102.0",
    "pydantic~=2.13.0",
    # pyvista pulls the X11-only `vtk` wheel. For headless rendering (N5)
    # the install must swap it for `vtk-osmesa==9.3.1` (bundled OSMesa,
    # CPU software GL, no display): after install run
    #   pip uninstall -y vtk
    #   pip install --extra-index-url https://wheels.vtk.org vtk-osmesa==9.3.1
    # CI does this in a dedicated step; see .github/workflows/ci.yml.
    "pyvista~=0.48.0",
    "typer~=0.25.0",
    "python-dotenv~=1.2.0",
    "websockets~=14.0",
    "numpy~=2.0",
    "keyring~=25.0",
    # claude-agent-sdk (F31 Claude Code mode) is import-guarded and added as a
    # hard dep in T6 when the client is actually exercised against a live CLI.
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.0",
    "ruff~=0.15.0",
    "import-linter~=2.11.0",
    "pyright~=1.1.409",
    "coverage~=7.14.0",
    "datamodel-code-generator>=0.26,<1.0",
]

[project.scripts]
# NB: not `touch` — that shadows GNU /usr/bin/touch inside an active venv.
touch-backend = "touch_backend.cli:app"

[project.urls]
Documentation = "https://github.com/vandpaolo/touch/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/touch_backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = [
    "live: hits the real Anthropic API; gated by ANTHROPIC_API_KEY (run with `pytest -m live`)",
]

[tool.coverage.run]
source = ["touch_backend"]
branch = false

[tool.coverage.report]
include = [
    "src/touch_backend/intent.py",
    "src/touch_backend/intent_validation.py",
    "src/touch_backend/pricing.py",
    "src/touch_backend/config.py",
    "src/touch_backend/adapters/*",
    "src/touch_backend/agent/sanity.py",
    "src/touch_backend/agent/planner.py",
    "src/touch_backend/agent/worker.py",
    "src/touch_backend/agent/executor.py",
    "src/touch_backend/agent/loop.py",
    "src/touch_backend/cli.py",
    "src/touch_backend/render/*",
]
show_missing = true

[tool.pyright]
exclude = ["src/touch_backend/_generated", "protocol/generated", "**/__pycache__"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["tests/fixtures", "src/touch_backend/_generated", "protocol/generated"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserting False is intentional in pytest.raises

[tool.ruff.lint.flake8-bugbear]
# Typer's CLI idiom puts typer.Option/Argument calls in argument defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.importlinter]
root_package = "touch_backend"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "intent has no project dependencies"
type = "forbidden"
source_modules = ["touch_backend.intent"]
forbidden_modules = [
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.agent",
    "touch_backend.adapters",
    "touch_backend.render",
    "touch_backend.cli",
]

[[tool.importlinter.contracts]]
name = "intent_validation depends only on touch_backend.intent"
type = "forbidden"
source_modules = ["touch_backend.intent_validation"]
forbidden_modules = [
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.agent",
    "touch_backend.adapters",
    "touch_backend.render",
    "touch_backend.cli",
]

[[tool.importlinter.contracts]]
name = "agent.planner depends only on intent + intent_validation + pricing + anthropic + stdlib"
type = "forbidden"
source_modules = ["touch_backend.agent.planner"]
forbidden_modules = [
    "touch_backend.config",
    "touch_backend.adapters",
    "touch_backend.render",
    "touch_backend.cli",
    "touch_backend.agent.sanity",
]

[[tool.importlinter.contracts]]
name = "agent.worker depends only on touch_backend.intent + adapters + stdlib"
type = "forbidden"
source_modules = ["touch_backend.agent.worker"]
forbidden_modules = [
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.render",
    "touch_backend.cli",
    "touch_backend.agent.sanity",
    "touch_backend.agent.planner",
    "anthropic",
]

[[tool.importlinter.contracts]]
name = "agent.sanity depends only on touch_backend.intent (plus stdlib, no I/O modules)"
type = "forbidden"
source_modules = ["touch_backend.agent.sanity"]
forbidden_modules = [
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.adapters",
    "touch_backend.render",
    "touch_backend.cli",
    "os",
    "pathlib",
    "subprocess",
    "shutil",
    "tempfile",
    "anthropic",
]

[[tool.importlinter.contracts]]
name = "adapters depend only on touch_backend.intent (plus stdlib, no I/O modules)"
type = "forbidden"
source_modules = ["touch_backend.adapters"]
forbidden_modules = [
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.agent",
    "touch_backend.render",
    "touch_backend.cli",
    "os",
    "pathlib",
    "subprocess",
    "shutil",
    "tempfile",
]

[[tool.importlinter.contracts]]
name = "render depends on no other touch_backend module (pyvista + build123d + stdlib only)"
type = "forbidden"
source_modules = ["touch_backend.render"]
forbidden_modules = [
    "touch_backend.intent",
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.agent",
    "touch_backend.adapters",
    "touch_backend.cli",
]

[[tool.importlinter.contracts]]
name = "agent.executor is a pure subprocess manager (stdlib only, no render)"
type = "forbidden"
source_modules = ["touch_backend.agent.executor"]
forbidden_modules = [
    "touch_backend.intent",
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.config",
    "touch_backend.render",
    "touch_backend.adapters",
    "touch_backend.cli",
    "touch_backend.agent.planner",
    "touch_backend.agent.sanity",
    "touch_backend.agent.worker",
    "touch_backend.agent.loop",
    "anthropic",
]

[[tool.importlinter.contracts]]
name = "agent.loop orchestrates but never imports the cli"
type = "forbidden"
source_modules = ["touch_backend.agent.loop"]
forbidden_modules = [
    "touch_backend.cli",
]

[[tool.importlinter.contracts]]
name = "cli is a thin shell — goes through the loop, not the mid-pipeline"
type = "forbidden"
source_modules = ["touch_backend.cli"]
# Only direct cli imports are forbidden; the cli reaches these transitively
# through agent.loop (its whole job), which is fine.
allow_indirect_imports = "true"
forbidden_modules = [
    "touch_backend.intent",
    "touch_backend.intent_validation",
    "touch_backend.pricing",
    "touch_backend.adapters",
    "touch_backend.render",
    "touch_backend.agent.sanity",
    "touch_backend.agent.worker",
    "touch_backend.agent.executor",
]

# --- T1b: new server/protocol modules ---

[[tool.importlinter.contracts]]
name = "tessellate is a leaf (OCP + numpy only, no project deps)"
type = "forbidden"
source_modules = ["touch_backend.tessellate"]
forbidden_modules = [
    "touch_backend.server",
    "touch_backend.session",
    "touch_backend.document",
    "touch_backend.planner",
    "touch_backend.llm_client",
    "touch_backend.frames",
    "touch_backend.keychain_bridge",
    "touch_backend.config",
]

[[tool.importlinter.contracts]]
name = "keychain_bridge is a leaf (keyring only, no project deps)"
type = "forbidden"
source_modules = ["touch_backend.keychain_bridge"]
forbidden_modules = [
    "touch_backend.server",
    "touch_backend.session",
    "touch_backend.document",
    "touch_backend.planner",
    "touch_backend.llm_client",
    "touch_backend.frames",
    "touch_backend.tessellate",
]

[[tool.importlinter.contracts]]
name = "llm_client sits below the engine (infra; keychain only)"
type = "forbidden"
source_modules = ["touch_backend.llm_client"]
forbidden_modules = [
    "touch_backend.server",
    "touch_backend.session",
    "touch_backend.document",
    "touch_backend.planner",
    "touch_backend.tessellate",
    "touch_backend.frames",
]

[[tool.importlinter.contracts]]
name = "server is the process root — nothing below it imports it"
type = "forbidden"
source_modules = [
    "touch_backend.session",
    "touch_backend.document",
    "touch_backend.planner",
    "touch_backend.tessellate",
    "touch_backend.frames",
    "touch_backend.llm_client",
    "touch_backend.keychain_bridge",
]
forbidden_modules = ["touch_backend.server"]
