[project]
name = "touch-sidecar"
version = "0.1.0"
description = "T0 packaging-spike sidecar — throwaway. WS server that emits a hardcoded face-tagged cube mesh."
requires-python = "==3.12.*"   # R12: OCP wheels pin to a Python minor; match it exactly when OCP lands (Day 4+).
dependencies = [
    "websockets>=12.0",
    "cadquery-ocp>=7.8,<7.9",  # OCP / OpenCASCADE kernel bindings (R12: pinned to a 7.8.x; matches the Python 3.12 wheel)
    "numpy>=1.26",             # OCP runtime dep
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
touch-sidecar = "touch_sidecar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["touch_sidecar"]
